fix the conditions of wining the game and code refactoring